--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
-            "type": "chrome",
+            "name": "Dart & Flutter",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
+            "type": "dart",
+            "program": "login_screen.dart",
         }
+
+
+        
     ]
 }
